# finance-sync

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  coolify.yaml  docker-compose.coolify.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-sdk.yml
docker/: Dockerfile.dev  prometheus.yml
docker/grafana/: README.md
docker/grafana/dashboards/: portfolio.json  sync-health.json  system.json
docker/grafana/provisioning/dashboards/: dashboards.yaml
docker/grafana/provisioning/datasources/: prometheus.yaml
docs/: API.md  ARCHITECTURE.md  DATABASE.md  MCP.md  ROADMAP.md  SEED_MIGRATIONS.md  SOLUTIONS_bug_user_registration_is_.md  connector-api.md  connector-development.md  connectors-overview.md  mcp-server.md  plugin-development.md
docs/adr/: 0001-modular-monolith-and-durable-outbox.md  0002-canonical-facts-raw-payload-retention.md  0003-asset-identity-and-market-data.md
examples/: csv_import_connector.py  manual_expense_connector.py  plaid_like_connector.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_auth_tables.py  0003_add_webhook_tables.py  0004_add_fundamentals_metadata_tables.py  0004_add_fx_rates.py  0004_add_reconciliation_tables.py  0004_add_scheduled_payments_cards.py  0004_add_tax_lots.py
scripts/: seed-qa-user.sh  setup-migration-user.sql
sdks/finance-sync-sdk/: COMPATIBILITY.md  README.md  pyproject.toml
sdks/finance-sync-sdk/src/finance_sync_sdk/: __init__.py  config.py  credentials.py  exceptions.py  models.py  plugin.py  py.typed  rate_limiter.py  registry.py
sdks/finance-sync-sdk/tests/: test_plugin.py
src/finance_sync/: __init__.py  __main__.py  app.py  cli.py  container.py  dependencies.py  lifespan.py  main.py
src/finance_sync/api/: __init__.py
src/finance_sync/api/middleware/: ai_rate_limit.py  rate_limit.py
src/finance_sync/api/v1/: __init__.py  accounts.py  ai_summary.py  allocation.py  auth.py  cashflow.py  (+15 more)
src/finance_sync/config/: __init__.py  environments.py  settings.py
src/finance_sync/connectors/: __init__.py  base.py  bunq.py  csv_import.py  exceptions.py  manual_expense.py  models.py  plaid_like.py  rate_limiter.py  registry.py  trading212.py  ynab.py
src/finance_sync/db/: __init__.py  repositories.py  repository.py  types.py  uow.py
src/finance_sync/enrichment/: __init__.py  gateway.py  metadata_enricher.py  models.py  price_store.py  security_resolver.py
src/finance_sync/exporter/: __init__.py  client.py  config.py  exporter.py  models.py  transaction_mapper.py
src/finance_sync/gui/: __init__.py  router.py
src/finance_sync/identity/: __init__.py  resolver.py
src/finance_sync/mcp/: __init__.py  __main__.py  auth.py  server.py
src/finance_sync/models/: __init__.py  account.py  api_key.py  balance.py  card_transaction.py  credential.py  detected_subscription.py  enrichment_freshness.py  enums.py  fundamental_observation.py  fx_rate.py  holding.py  mixins.py  outbox.py  reconciliation.py  resolution_audit_log.py  scheduled_payment.py  security.py  security_listing.py  security_metadata_observation.py  security_price.py  sync_run.py  tax_lot.py  tenant.py  transaction.py  unresolved_security.py  user.py  webhook.py
src/finance_sync/observability/: __init__.py  health.py  logging.py  metrics.py
src/finance_sync/schemas/: __init__.py  fx_rate.py
src/finance_sync/services/: ai_summary.py  allocation.py  auth.py  cashflow.py  fx_service.py  github_issue.py  ha_integration.py  merchant_classifier.py  performance.py  read_api.py  reconciliation.py  subscription_detector.py  tax_lot_service.py  webhook.py
src/finance_sync/sync/: __init__.py  orchestrator.py  outbox.py  outbox_publisher.py  reconciliation.py  sync_run.py
src/finance_sync/templates/: dashboard.html  login.html  register.html
src/finance_sync/utils/: __init__.py  currency_converter.py
src/finance_sync/worker/: __init__.py  __main__.py  health.py  jobs.py  monitoring.py  scheduler.py
tests/: __init__.py  conftest.py  test_actual_budget_exporter.py  test_allocation.py  test_app.py  test_auth.py  test_cashflow.py  test_cli_reconciliation.py  test_config.py  test_container.py  test_currency_converter.py  test_enums.py  test_feedback_api.py  test_fx_rate_model.py  test_fx_service.py  test_github_issue_service.py  test_main.py  test_mcp_integration.py  test_mcp_server.py  test_merchant_classifier.py  test_merchant_classifier_extras.py  test_models.py  test_observability_health.py  test_observability_logging.py  test_observability_metrics.py  test_outbox.py  test_performance.py  test_phase52.py  test_placeholder.py  test_plugin_integration.py  test_read_api.py  test_reconciliation.py  test_reconciliation_api.py  test_reconciliation_edge_cases.py  test_reconciliation_integration.py  test_reconciliation_service.py  test_repository.py  test_subscription_detection.py  test_subscription_detection_extras.py  test_sync_orchestrator.py  (+8 more)
tests/connectors/: contract_test_template.py  test_base.py  test_models.py  test_rate_limiter.py  test_registry.py
tests/connectors/bunq/: conftest.py  test_bunq_connector.py  test_bunq_scheduled_cards.py
tests/connectors/csv_import/: test_csv_import_connector.py
tests/connectors/fixtures/: bunq_api_fixtures.py  trading212_api_fixtures.py  ynab_api_fixtures.py
tests/connectors/manual_expense/: test_manual_expense_connector.py
tests/connectors/plaid_like/: test_plaid_like_connector.py
tests/connectors/trading212/: conftest.py  test_trading212_connector.py
tests/connectors/ynab/: conftest.py  test_ynab_connector.py
tests/enrichment/: conftest.py  test_enrichment_status.py  test_fundamentals_enrichment.py  test_gateway.py  test_price_store.py  test_security_resolver.py
tests/exporter/: contract_test_template.py  test_actual_budget_contract.py  test_wealthfolio_contract.py
tests/exporter/fixtures/: ab_fixtures.py  wf_fixtures.py
tests/identity/: test_identity_resolution.py  test_securities_api.py
(+12 files in other folders)
