[project]
name = "finance-sync"
version = "0.1.0"
description = "Self-hosted, API-first financial data platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "rbnbrls", email = "3826339+rbnbrls@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis[hiredis]>=5.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "cryptography>=44",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.18",
    "structlog>=25.1",
    "prometheus-client>=0.21",
    "actualpy>=0.22",
    "apscheduler>=3.10",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "ruff>=0.9",
    "pyright>=1.1",
    "pre-commit>=4.0",
]

openbb = [
    "openbb>=4.0",
]

[project.entry-points."finance_sync.connectors"]
# Built-in connectors
bunq = "finance_sync.connectors.bunq:BunqConnector"
trading212 = "finance_sync.connectors.trading212:Trading212Connector"

[tool.ruff]
# Enable all default rules and a curated set of optional ones
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "RUF", # ruff-specific rules
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "EM",  # flake8-errmsg
    "G",   # flake8-logging-format
    "LOG", # flake8-logging
    "PIE", # flake8-pie
    "RET", # flake8-return
    "RSE", # flake8-raise
    "SLF", # flake8-self
    "T20", # flake8-print
    "TCH", # flake8-type-checking
    "YTT", # flake8-pytest-style
    "ISC", # flake8-implicit-str-concat
    "ASYNC", # flake8-async
    "FURB", # refurb
    "PERF", # perflint
]
lint.ignore = [
    "RUF012",  # mutable class defaults — accepted pattern for Pydantic
    "COM812",  # trailing comma magic — handled by formatter
    "ISC001",  # implicit concat — handled by formatter
    "D",       # docstring rules — will enable later
]

# Line length
line-length = 80

# Formatting — use Ruff's built-in formatter
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Per-file overrides
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "D", "ARG", "SLF", "ASYNC"]
"src/finance_sync/api/**" = ["B008"]
"src/finance_sync/__init__.py" = ["T20"]
"src/finance_sync/models/*" = ["TC001", "TC003"]
"src/finance_sync/db/repository.py" = ["A002", "TC002"]
"src/finance_sync/db/uow.py" = ["TC002", "TC003"]


[tool.pyright]
strict = ["**/*.py"]
typeCheckingMode = "strict"
include = ["src", "tests"]
exclude = ["**/node_modules", "**/__pycache__"]
pythonVersion = "3.12"
pythonPlatform = "Linux"
reportMissingTypeStubs = "error"
reportUnknownMemberType = "error"
reportUnknownVariableType = "error"
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportPrivateUsage = "warning"
reportUnusedFunction = "error"
reportUnusedVariable = "error"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*", "async_test_*"]

[tool.coverage.run]
source = ["finance_sync", "src"]
branch = true
command_line = "-m pytest"

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
skip_empty = true

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
